<resources>
    <string name="app_name">E Ink Print Service Plugin</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="server_header">Server</string>
    <string name="credentials_header">Credentials</string>

    <!-- Server Preferences -->
    <string name="host_title">Host</string>
    <string name="port_title">Port</string>
    <string name="secure_title">Use secure connection (HTTPS)</string>

    <!-- API Key Preferences -->
    <string name="key_title">API Key</string>
    <string name="secret_title">API Secret</string>
</resources>